@@ -188,7 +188,7 @@ name|getPrefixCodedShift
 import|;
 end_import
 begin_comment
-comment|/**  * Decomposes a given {@link GeoPointMultiTermQuery} into a set of terms that represent the query criteria using  * {@link GeoPointField.TermEncoding#PREFIX} method defined by  * {@link GeoPointField}. The terms are then enumerated by the  * {@link GeoPointTermQueryConstantScoreWrapper} and all docs whose GeoPoint fields match the prefix terms or pass  * the {@link GeoPointMultiTermQuery.CellComparator#postFilter} criteria are returned in the  * resulting DocIdSet.  *  *  @lucene.experimental  */
+comment|/**  * Decomposes a given {@link GeoPointMultiTermQuery} into a set of terms that represent the query criteria using  * {@link org.apache.lucene.spatial.document.GeoPointField.TermEncoding#PREFIX} method defined by  * {@link GeoPointField}. The terms are then enumerated by the  * {@link GeoPointTermQueryConstantScoreWrapper} and all docs whose GeoPoint fields match the prefix terms or pass  * the {@link GeoPointMultiTermQuery.CellComparator#postFilter} criteria are returned in the  * resulting DocIdSet.  *  *  @lucene.experimental  */
 end_comment
 begin_class
 DECL|class|GeoPointPrefixTermsEnum
